Update：添加python函数相关笔记；

--- a/docs/1.python简介.md
+++ b/docs/1.python简介.md
@@ -21,7 +21,7 @@
 ## 3.3 字符串
  - [1] 字符串表示：以单引号'或双引号"括起来的任意文本，如：'abc'，"xyz"等。
  - [2] 转义字符\：可以转义很多字符，如'\n'表示换行，'\t'表示制表符，'\\'表示字符\。
- - [3] 多行内容表示：Pytho允许用'''...'''格式表示多行内容。
+ - [3] 多行内容表示：Python允许用'''...'''格式表示多行内容。
  - [4] UTF-8编码：
 ```python
 #!/usr/bin/env python3
