Update：添加一些python特性相关学习笔记；

--- a/docs/2.python函数.md
+++ b/docs/2.python函数.md
@@ -79,7 +79,7 @@ def enroll(name, gender, age=6, city='Beijing'):
   print('age:', age)
   print('city:', city)
 ```
- - [5] 可变参数：*args(argments)会将传入多个参数(包括0个参数)转为一个元组，**kwargs(keyword arguments)表示将传入多个带名称的参数(包括0个参数)变为字典：
+ - [5] 可变参数：*args(arguments)会将传入多个参数(包括0个参数)转为一个元组，**kwargs(keyword arguments)表示将传入多个带名称的参数(包括0个参数)变为字典：
 ```python
 def test_args(first, *args):
   print('Required argument: ', first)
